--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+:root{
+  --main-color:#45C0BE;
+  --gradient : linear-gradient(to right, #388483, #3E9E9D, #43B6B5);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+padding:10px 50px;
+border-radius: 25px;
+text-transform: capitalize;
+font-weight: bold;
+color: white;
+background: var(--gradient);
+margin-top: 20px;
+border: none;
+outline: none;
+font-size: 25px;
+cursor: pointer;
 }
